# final-project-RorroArt

./: .gitignore  README.md  compiler.html  final-project.cabal  proposal.txt  writeup.html
app/: BaselineKernelFinalIR.hs  BaselineKernelFinalLowering.hs  FinalLowering.hs
app/compiler/: AutoVectorizeFinalIR.hs  AutovecProgramSuite.hs  BaselineDebugPolicy.hs  BaselineKernel.hs  BaselineKernelBatchingFinalIR.hs  BaselineKernelFinalIR.hs  BatchVectorizeFinalIR.hs  BatchvecProgramSuite.hs  Bundle.hs  Canonicalize.hs  DCE.hs  FinalIR.hs  FinalIRBuilder.hs  FinalIRUtils.hs  FinalLowering.hs  ISA.hs  Machine.hs  Main.hs  Peephole.hs  PythonInterop.hs  Schedule.hs  TestSuite.hs  Vectorize.hs
app/simulator/: Main.hs  ParseTest.hs  Parser.hs  Sim.hs
app/simulator/Sim/: Exec.hs  MemoryIO.hs  Runner.hs  StateAccess.hs  Types.hs
docs/: autovectorization.md
pbt/: README.md  main.py  pyproject.toml  test_simulator.py
scripts/: gen_baseline.py  run_ref.py  run_ref_server.py
src/: ISA.hs
test/: PBT.hs
test/Test/: Bridge.hs  Gen.hs
writeup/: fph.css
