cabal-version:      3.0
name:               final-project
version:            0.1.0.0
license:            MIT
author:             RorroArt
build-type:         Simple

common shared
    default-language: GHC2021
    ghc-options:      -Wall
    build-depends:
        base >= 4.17 && < 5

library
    import:           shared
    hs-source-dirs:   src
    exposed-modules:
        Lib
        ISA

executable simulator
    import:           shared
    hs-source-dirs:   app/simulator
    main-is:          Main.hs
    other-modules:
        Sim.Exec
        Sim.MemoryIO
        Sim.Runner
        Sim.StateAccess
        Sim.Types
        Sim
        Parser
    build-depends:
        final-project
        , containers >= 0.6 && < 0.7
        , mtl >= 2.3 && < 2.4
        , bytestring >= 0.11 && < 0.13

executable compiler
    import:           shared
    hs-source-dirs:   app/compiler
    main-is:          Main.hs
    other-modules:
        BaselineKernel
        PythonInterop
        FinalIR
        FinalIRUtils
        FinalIRBuilder
        FinalLowering
        BaselineKernelFinalIR
        BaselineKernelFinalLowering
        BatchVectorizeFinalIR
        BaselineDebugPolicy
        BaselineKernelBatchingFinalIR
        BatchvecProgramSuite
    build-depends:
        final-project
        , containers >= 0.6 && < 0.7
        , mtl >= 2.3 && < 2.4
